--- a/.github/workflows/publish-ppa.yml
+++ b/.github/workflows/publish-ppa.yml
@@ -205,7 +205,7 @@ jobs:
           VERSION="${{ steps.check_release.outputs.VERSION }}"
           
           echo "Uploading to ${{ env.PPA_NAME }}..."
-          dput --no-check-signature ${{ env.PPA_NAME }} sealantern_${VERSION}_source.changes
+          dput ${{ env.PPA_NAME }} sealantern_${VERSION}_source.changes
           
           echo "✅ Successfully uploaded sealantern ${VERSION} to PPA"
 
