--- a/.github/workflows/publish-ppa.yml
+++ b/.github/workflows/publish-ppa.yml
@@ -146,22 +146,12 @@ jobs:
           CHANGELOG
           
           # Create debian/rules with actual tabs
-          cat > debian/rules << 'RULES'
-          #!/usr/bin/make -f
-          
-          %:
-          RULES
-          echo -e '\tdh $@' >> debian/rules
-          cat >> debian/rules << 'RULES2'
-          
-          override_dh_auto_build:
-          RULES2
-          echo -e '\t# Binary already built by upstream' >> debian/rules
-          cat >> debian/rules << 'RULES3'
-          
-          override_dh_auto_install:
-          RULES3
-          echo -e '\tdpkg-deb -x Sea.Lantern_*_amd64.deb debian/sealantern' >> debian/rules
+          printf '%s\n' '#!/usr/bin/make -f' '' '%:' > debian/rules
+          printf '\t%s\n' 'dh $@' >> debian/rules
+          printf '%s\n' '' 'override_dh_auto_build:' >> debian/rules
+          printf '\t%s\n' '# Binary already built by upstream' >> debian/rules
+          printf '%s\n' '' 'override_dh_auto_install:' >> debian.rules
+          printf '\t%s\n' 'dpkg-deb -x Sea.Lantern_*_amd64.deb debian/sealantern' >> debian/rules
           chmod +x debian/rules
           
           echo "3.0 (native)" > debian/source/format
