fix: remove mantic, keep only LTS versions (jammy, noble)

--- a/.github/workflows/publish-ppa.yml
+++ b/.github/workflows/publish-ppa.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distro: ['jammy', 'noble', 'mantic']
+        distro: ['jammy', 'noble']
       fail-fast: false
     
     steps:
