--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -2,8 +2,8 @@ name: Build and Upload to PPA
 
 on:
   push:
-    tags:
-      - 'sea-lantern-v*'
+    branches:
+      - ppa-deploy
   workflow_dispatch:
     inputs:
       version:
@@ -33,8 +33,6 @@ jobs:
         run: |
           if [ "${{ github.event.inputs.version }}" != "" ]; then
             VERSION="${{ github.event.inputs.version }}"
-          elif [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
           else
             VERSION=$(node -p "require('./package.json').version")
           fi
@@ -136,7 +134,6 @@ jobs:
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import --pinentry-mode loopback --passphrase "${{ secrets.PPA_GPG_PASSPHRASE }}"
           GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep sec | head -1 | awk '{print $2}' | cut -d'/' -f2)
           echo "GPG_KEY_ID=$GPG_KEY_ID" >> $GITHUB_ENV
-          echo "GPG_TTY=" >> $GITHUB_ENV
           export GNUPGHOME=~/.gnupg
           chmod 700 ~/.gnupg
 
@@ -222,9 +219,9 @@ jobs:
           cd ..
           
           echo "Uploading ${DISTRO} package to PPA..."
-          dput ppa:brianeee7878/sealantern sealantern-ppa-updater_${PACKAGE_VERSION}_source.changes
+          dput ppa:brianeee7878/sealantern sealantern-ppa-updater_${PACKAGE_VERSION}_source.changes || true
           
-          echo "✅ Successfully uploaded ${DISTRO} package to PPA"
+          echo "✅ Attempted to upload ${DISTRO} package to PPA"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
