--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y dpkg wget devscripts dput gnupg
+          sudo apt-get install -y dpkg wget devscripts dput gnupg build-essential fakeroot debhelper
 
       - name: Get version
         id: version
